# cuda_practice

hello/: c_hello  c_hello.cu  cuda_hello
julia_set_fractal/: CMakeLists.txt  cpu_bitmap.h  julia.cu  julia.cuh  julia_main.cpp  readme.md
opencv_test/: CMakeLists.txt  cuda_test.cu  cuda_test.cuh  opencv_test.cpp
vector_add/: vector_add.cu  vector_add_cuda.cu  vector_add_cuda_grid.cu  vector_add_cuda_serial.cu  vector_add_cuda_thread.cu
